--- a/configs/rk3588-rock-5b_defconfig
+++ b/configs/rk3588-rock-5b_defconfig
@@ -31,7 +31,6 @@ CONFIG_SPL_FIT_IMAGE_POST_PROCESS=y
 CONFIG_SPL_FIT_HW_CRYPTO=y
 # CONFIG_SPL_SYS_DCACHE_OFF is not set
 CONFIG_BOOTDELAY=0
-CONFIG_DISABLE_CONSOLE=y
 CONFIG_SYS_CONSOLE_INFO_QUIET=y
 # CONFIG_DISPLAY_CPUINFO is not set
 CONFIG_ANDROID_BOOTLOADER=y
@@ -112,6 +111,7 @@ CONFIG_MISC=y
 CONFIG_SPL_MISC=y
 CONFIG_MISC_DECOMPRESS=y
 CONFIG_SPL_MISC_DECOMPRESS=y
+CONFIG_ROCKCHIP_OTP=y
 CONFIG_ROCKCHIP_HW_DECOMPRESS=y
 CONFIG_SPL_ROCKCHIP_HW_DECOMPRESS=y
 CONFIG_SPL_ROCKCHIP_SECURE_OTP=y
